@@ -49,18 +49,6 @@ cdm_DFI_PLOT3D::read_Func(FILE* fp,
     //ascii
     if( m_input_type == CDM::E_CDM_FILE_TYPE_ASCII ) {
       double temp;
-#ifdef CDM_ENABLE_BUFFER_TUNING
-      for(int n=0; n<nvariS; n++) {
-        for(int k=0; k<szS[2]; k++) {
-          for(int j=0; j<szB[1]; j++) {
-            for(int i=0; i<szB[0]; i++) {
-              fscanf(fp,"%lf\n",&temp);
-              dataS->val(i,j,k,n) = (T)temp;
-            }
-          }
-        }
-      }
-#else
       for(int n=0; n<nvariS; n++) {
       for(int k=0; k<nz; k++) {
         //headインデクスをずらす
@@ -77,12 +65,11 @@ cdm_DFI_PLOT3D::read_Func(FILE* fp,
         //コピー
         dataB->copyArrayNvari(dataS,n);
       }}
-#endif
     //Fortran Binary
     } else if( m_input_type == CDM::E_CDM_FILE_TYPE_FBINARY ) {
       unsigned int dmy;
       fread(&dmy, sizeof(int), 1, fp);
-#ifdef CDM_ENABLE_BUFFER_TUNING
+#ifdef CDM_BUFFER_MB_SIZE
       size_t ndata = dataS->getArrayLength();
       if( dataS->readBinary(fp,matchEndian) != ndata ) return CDM::E_CDM_ERROR_READ_FIELD_DATA_RECORD;
 #else
@@ -102,7 +89,7 @@ cdm_DFI_PLOT3D::read_Func(FILE* fp,
 
     //binary
     } else {
-#ifdef CDM_ENABLE_BUFFER_TUNING
+#ifdef CDM_BUFFER_MB_SIZE
       size_t ndata = dataS->getArrayLength();
       if( dataS->readBinary(fp,matchEndian) != ndata ) return CDM::E_CDM_ERROR_READ_FIELD_DATA_RECORD;
 #else
