@@ -56,58 +56,6 @@ cdm_DFI_BOV::read_HeaderRecord(FILE* fp,
 }
 
 // #################################################################
-// ファイルのデータレコード読込み
-CDM::E_CDM_ERRORCODE
-cdm_DFI_BOV::read_Datarecord(FILE* fp,
-                             bool matchEndian,
-                             cdm_Array* buf,
-                             int head[3],
-                             int nz,
-                             cdm_Array* &src)
-{
-
-  //１層ずつ読み込み
-  int hzB = head[2];
-
-  CDM::E_CDM_ARRAYSHAPE shape = buf->getArrayShape();
-
-  //NIJKの読込み
-  if( shape == CDM::E_CDM_NIJK ) {
-    for( int k=0; k<nz; k++ ) {
-      //headインデクスをずらす
-      head[2]=hzB+k;
-      buf->setHeadIndex(head);
-
-      //１層読み込
-      size_t ndata = buf->getArrayLength();
-      if( buf->readBinary(fp,matchEndian) != ndata ) return CDM::E_CDM_ERROR_READ_FIELD_DATA_RECORD;
-
-      // コピー
-      buf->copyArray(src);
-    }
-  }
-  //IJKNの読込み 
-  else if( shape == CDM::E_CDM_IJKN ) {
-    for(int n=0; n<src->getNvari(); n++) {
-    for(int k=0; k<nz; k++) {
-      //headインデックスをずらす
-      head[2]=hzB+k;
-      buf->setHeadIndex(head);
-
-      //１層読み込
-      size_t ndata = buf->getArrayLength();
-      if( buf->readBinary(fp,matchEndian) != ndata ) return CDM::E_CDM_ERROR_READ_FIELD_DATA_RECORD;
-
-      //コピー
-      buf->copyArrayNvari(src,n);
-    }}
-  }
-
-  return CDM::E_CDM_SUCCESS;
-
-}
-
-// #################################################################
 // Averaged レコードの読込み
 CDM::E_CDM_ERRORCODE
 cdm_DFI_BOV::read_averaged(FILE* fp,
